<resources>
    <string name="app_name">Mobile-Programming-Project</string>
    <string name="available_balance">390.000</string>
    <string name="available_balance_text">Available Balance (Monthly)</string>
    <string name="spent_rp_text">Spent (Rp)</string>
    <string name="spent_rp_number">860.000</string>
    <string name="earned_rp_number">1.250.000</string>
    <string name="earned_rp_text">Earned (Rp)</string>
    <string name="more_details">More Details</string>
    <string name="top_spent_category">You haven\'t spent yet.</string>
    <string name="expenses_overview">Expenses Overview</string>
    <string name="view_budget_plan">View Budget Plan</string>
    <string name="balance_financial_details">Your balance is Rp390.000</string>
    <string name="add_budget">Add Budget</string>
    <string name="add_spent">Add Spent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_history">Transaction History</string>
</resources>