<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:layout_gravity="center"
    tools:context=".FinancialDetailsActivity">




        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_icon"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.07999998">

            </ImageButton>


            <TextView
                android:id="@+id/totalBalanceFinancialDetailsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/dmsansbold"
                android:gravity="center"
                android:text="@string/balance_financial_details"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/earningLineChart"
                android:layout_width="380dp"
                android:layout_height="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalBalanceFinancialDetailsTextView" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/spentLineChart"
                android:layout_width="380dp"
                android:layout_height="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalBalanceFinancialDetailsTextView"></com.github.mikephil.charting.charts.LineChart>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="120dp"
                android:background="@drawable/rounded_corners_main_screen"
                android:gravity="fill_horizontal"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:paddingVertical="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalBalanceFinancialDetailsTextView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dmsansregular"
                        android:text="@string/earned_rp_text"
                        android:textColor="@color/white80"
                        android:textSize="11sp">

                    </TextView>

                    <TextView
                        android:id="@+id/earnedNumberTextView"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/dmsansbold"
                        android:text="@string/earned_rp_number"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:drawableStartCompat="@drawable/round_small_main_screen"
                        app:drawableTint="@color/greenearned">

                    </TextView>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dmsansregular"
                        android:text="@string/spent_rp_text"
                        android:textColor="@color/white80"
                        android:textSize="11sp">

                    </TextView>

                    <TextView
                        android:id="@+id/spentNumberTextView"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/dmsansbold"
                        android:text="@string/spent_rp_number"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:drawableStartCompat="@drawable/round_small_main_screen"
                        app:drawableTint="@color/redspent">

                    </TextView>
                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/addSpentButton"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:background="@drawable/rounded_corners_main_screen"
                android:backgroundTint="@color/redspent"
                android:fontFamily="@font/dmsansbold"
                android:text="@string/add_spent"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            </Button>

            <Button
                android:id="@+id/addEarnedButton"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corners_main_screen"
                android:backgroundTint="@color/greenearned"
                android:fontFamily="@font/dmsansbold"
                android:text="@string/add_budget"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"></Button>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/fragmentViewPager"
                android:layout_width="380dp"
                android:layout_height="match_parent"

                android:layout_marginTop="400dp"
                android:fitsSystemWindows="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addSpentButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>